# waterloo-ai-agents-hackathon2026

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  index.html  locustfile.py  package-lock.json  package.json  render.yaml  tailwind.config.cjs
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/agent/: __init__.py  db.py  hume_tracker.py  interview_agent.py  main.py  prompt_builder.py  session_manager.py
backend/config/: heart_config.yaml
backend/docs/: suitor_entry_flow_api.md
backend/migrations/: README  env.py
backend/migrations/versions/: 081dfbe8083a_init_db.py  1e820b0afd83_add_concent.py  41bbcc955fde_add_session_emotion.py  443b26386e80_add_heart_deactive.py  6c66fe9f5302_db_init.py  6f197413d9db_add_feedback_and_booking.py  83808441e2aa_add_suitor_persona.py  9a6f3c2b1d10_full_valentine_hotline_schema.py  b36aff49f07e_remove_hume.py  bdd57d9128c7_add_scoring.py  c9ca9dbd3e75_add_other_schemas.py  e6de850da091_add_livkit_session.py
backend/scripts/: export_openapi.py  get_clerk_jwt.py
backend/src/: __init__.py  dependencies.py  main.py
backend/src/api/: mcps.py  routes.py
backend/src/core/: config.py  container.py  database.py  enums.py  events.py  exception_handlers.py  exceptions.py  logging_conf.py  observability.py  rate_limit.py  security.py  validators.py
backend/src/models/: __init__.py  base_model.py  booking_model.py  conversation_turn_model.py  domain_enums.py  heart_model.py  score_model.py  screening_question_model.py  session_model.py  suitor_model.py  user_model.py
backend/src/repository/: base_repository.py  booking_repository.py  conversation_turn_repository.py  heart_repository.py  score_repository.py  screening_question_repository.py  session_repository.py  suitor_repository.py  user_repository.py
backend/src/schemas/: admin_schema.py  auth_schema.py  base_schema.py  booking_schema.py  chat_schema.py  common_schema.py  dashboard_schema.py  heart_schema.py  public_schema.py  screening_question_schema.py  session_schema.py  suitor_schema.py  user_schema.py
backend/src/services/: base_service.py  calcom_service.py  chat_service.py  config_loader.py  livekit_service.py  tavus_service.py  user_service.py
backend/src/tests/: conftest.py  test_api_contract.py  test_dashboard_api.py  test_e2e_flows.py  test_m1_foundation.py  test_m2_heart_config.py  test_m3_conversation_engine.py  test_m4_suitor_entry.py  test_m5_scoring.py  test_m7_dashboard_api_contract.py  test_m7_dashboard_auth.py  test_m7_dashboard_heart_status.py  test_m7_dashboard_integrity.py  test_m7_dashboard_session_detail.py  test_m7_dashboard_sessions.py  test_m7_dashboard_stats.py  test_m7_dashboard_trends.py  test_m8_launch_hardening.py
backend/src/util/: query_builder.py  schema.py
backend/workers/: __init__.py  main.py
(+185 files in other folders)
